--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
           <body>
             <header class="header-banner" id="iq5u">
               <div class="container-width" id="iq7f">
-                <div class="logo-container">
-                  <div class="logo" id="i7e8">
-                  </div>
+                <div class="logo-container" id="i60l">
                 </div>
-                <nav class="menu">
-                  <div class="menu-item" id="il64">BUILDER
+                <nav class="menu" id="icuu">
+                  <div class="menu-item" id="il64">Link3
                   </div>
-                  <div class="menu-item">TEMPLATE
+                  <div class="menu-item" id="idhl">Link2
                   </div>
-                  <div class="menu-item">WEB
+                  <div class="menu-item" id="iraam">Link1
                   </div>
                 </nav>
                 <div class="clearfix">
@@ -30,65 +28,25 @@
               </div>
             </header>
             <section class="flex-sect" id="iviol">
-              <div class="container-width">
-                <div class="flex-title">Flex is the new black
+              <div class="container-width" id="iym6y">
+                <div class="flex-title" id="iu88h">What Our Club Does
                 </div>
-                <div class="flex-desc">With flexbox system you're able to build complex layouts easily and with free responsivity
+                <div class="flex-desc" id="ibvfj">With flexbox system you're able to build complex layouts easily and with free responsivity
                 </div>
-                <div class="cards">
-                  <div class="card">
-                    <div class="card-header">
-                    </div>
-                    <div class="card-body">
-                      <div class="card-title">Title one
+                <div class="cards" id="ikkl5">
+                  <div class="card" id="ivank">
+                    <div class="card-body" id="i2ufz">
+                      <div class="card-title" id="i9e5f">Title 1
                       </div>
-                      <div class="card-sub-title">Subtitle one
+                      <div class="card-sub-title" id="ija8z">Subtitle one
                       </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      <div class="card-desc" id="i8z1u">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                       </div>
                     </div>
                   </div>
                   <div class="card">
-                    <div class="card-header ch2">
-                    </div>
-                    <div class="card-body">
-                      <div class="card-title">Title two
-                      </div>
-                      <div class="card-sub-title">Subtitle two
-                      </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header ch3">
-                    </div>
-                    <div class="card-body">
-                      <div class="card-title">Title three
-                      </div>
-                      <div class="card-sub-title">Subtitle three
-                      </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header ch4">
-                    </div>
-                    <div class="card-body">
-                      <div class="card-title">Title four
-                      </div>
-                      <div class="card-sub-title">Subtitle four
-                      </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header ch5">
-                    </div>
-                    <div class="card-body">
-                      <div class="card-title">Title five
+                    <div class="card-body" id="ifqbo">
+                      <div class="card-title" id="ilkqh">Title 2
                       </div>
                       <div class="card-sub-title">Subtitle five
                       </div>
@@ -97,10 +55,8 @@
                     </div>
                   </div>
                   <div class="card">
-                    <div class="card-header ch6">
-                    </div>
                     <div class="card-body">
-                      <div class="card-title">Title six
+                      <div class="card-title" id="ieyyr">Title 3
                       </div>
                       <div class="card-sub-title">Subtitle six
                       </div>
@@ -111,100 +67,99 @@
                 </div>
               </div>
             </section>
-            <section class="am-sect">
-              <div class="container-width">
-                <div class="am-container">
-                  <img src="/assets/images/demos/phone-app.png" class="img-phone"/>
-                  <div class="am-content">
-                    <div class="am-pre">ASSET MANAGER
-                    </div>
-                    <div class="am-title">Manage your images with Asset Manager
-                    </div>
-                    <div class="am-desc">You can create image blocks with the command from the left panel and edit them with double click
-                    </div>
-                    <div class="am-post">Image uploading is not allowed in this demo
-                    </div>
-                  </div>
+            <section class="flex-sect" id="i4wxnh">
+              <div class="container-width" id="icrx1l">
+                <div class="flex-title" id="iill0k">Our Investment Strategies
                 </div>
-              </div>
-            </section>
-            <section class="blk-sect">
-              <div class="container-width">
-                <div class="blk-title">Blocks
+                <div class="flex-desc" id="ikumb3">With flexbox system you're able to build complex layouts easily and with free responsivity
                 </div>
-                <div class="blk-desc">Each element in HTML page could be seen as a block. On the left panel you could find different kind of blocks that you can create, move and style
-                </div>
-                <div class="price-cards">
-                  <div class="price-card-cont">
-                    <div class="price-card">
-                      <div class="pc-title">Starter
+                <div class="cards" id="ih4ozp">
+                  <div class="card" id="iwsyhf">
+                    <div class="card-body" id="i9x48f">
+                      <div class="card-title" id="iq1xeg">Title 1
                       </div>
-                      <div class="pc-desc">Some random list
+                      <div class="card-sub-title" id="inr74m">Subtitle one
                       </div>
-                      <div class="pc-feature odd-feat">+ Starter feature 1
-                      </div>
-                      <div class="pc-feature">+ Starter feature 2
-                      </div>
-                      <div class="pc-feature odd-feat">+ Starter feature 3
-                      </div>
-                      <div class="pc-feature">+ Starter feature 4
-                      </div>
-                      <div class="pc-amount odd-feat">$ 9,90/mo
+                      <div class="card-desc" id="iblbt3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                       </div>
                     </div>
                   </div>
-                  <div class="price-card-cont">
-                    <div class="price-card pc-regular">
-                      <div class="pc-title">Regular
+                  <div class="card">
+                    <div class="card-body" id="iplxb7">
+                      <div class="card-title" id="ipakt8">Title 2
                       </div>
-                      <div class="pc-desc">Some random list
+                      <div class="card-sub-title">Subtitle five
                       </div>
-                      <div class="pc-feature odd-feat">+ Regular feature 1
-                      </div>
-                      <div class="pc-feature">+ Regular feature 2
-                      </div>
-                      <div class="pc-feature odd-feat">+ Regular feature 3
-                      </div>
-                      <div class="pc-feature">+ Regular feature 4
-                      </div>
-                      <div class="pc-amount odd-feat">$ 19,90/mo
+                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                       </div>
                     </div>
                   </div>
-                  <div class="price-card-cont">
-                    <div class="price-card pc-enterprise">
-                      <div class="pc-title">Enterprise
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="card-title" id="iifxtb">Title 3
                       </div>
-                      <div class="pc-desc">Some random list
+                      <div class="card-sub-title">Subtitle six
                       </div>
-                      <div class="pc-feature odd-feat">+ Enterprise feature 1
-                      </div>
-                      <div class="pc-feature">+ Enterprise feature 2
-                      </div>
-                      <div class="pc-feature odd-feat">+ Enterprise feature 3
-                      </div>
-                      <div class="pc-feature">+ Enterprise feature 4
-                      </div>
-                      <div class="pc-amount odd-feat">$ 29,90/mo
+                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </section>
-            <section class="bdg-sect">
+            <section class="flex-sect" id="i9xsj9">
+              <div class="container-width" id="is95vi">
+                <div class="flex-title" id="ipcqka">Our Historical Performance
+                </div>
+                <div class="flex-desc" id="iulcgm">With flexbox system you're able to build complex layouts easily and with free responsivity
+                </div>
+                <div class="cards" id="i6p8yj">
+                  <div class="card" id="ibbjts">
+                    <div class="card-body">
+                      <div class="card-title" id="ihx6db">Title five
+                      </div>
+                      <div class="card-sub-title">Subtitle five
+                      </div>
+                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card" id="i1lqfk">
+                    <div class="card-body">
+                      <div class="card-title" id="i9jv6c">Title five
+                      </div>
+                      <div class="card-sub-title">Subtitle five
+                      </div>
+                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card" id="ipaiwn">
+                    <div class="card-body">
+                      <div class="card-title" id="iylvkg">Title five
+                      </div>
+                      <div class="card-sub-title">Subtitle five
+                      </div>
+                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section class="bdg-sect" id="ihtldu">
               <div class="container-width">
-                <h1 class="bdg-title">The team
+                <h1 class="bdg-title" id="i6x5iy">The team
                 </h1>
                 <div class="badges">
-                  <div class="badge">
-                    <div class="badge-header">
+                  <div class="badge" id="ipeeff">
+                    <div class="badge-header" id="ifsp1k">
                     </div>
-                    <img src="/assets/images/demos/team1.jpg" class="badge-avatar"/>
+                    <img src="/assets/images/demos/team1.jpg" class="badge-avatar" id="iu3qhc"/>
                     <div class="badge-body">
-                      <div class="badge-name">Adam Smith
+                      <div class="badge-name" id="i1ru01">Wentao Luo
                       </div>
-                      <div class="badge-role">CEO
+                      <div class="badge-role" id="isf3fl">Principal Memembers
                       </div>
                       <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
                       </div>
@@ -220,9 +175,9 @@
                     </div>
                     <img src="/assets/images/demos/team2.jpg" class="badge-avatar"/>
                     <div class="badge-body">
-                      <div class="badge-name">John Black
+                      <div class="badge-name" id="ip8fly">Yanhao Guo
                       </div>
-                      <div class="badge-role">Software Engineer
+                      <div class="badge-role">Princiapl members
                       </div>
                       <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
                       </div>
@@ -238,9 +193,9 @@
                     </div>
                     <img src="/assets/images/demos/team3.jpg" class="badge-avatar"/>
                     <div class="badge-body">
-                      <div class="badge-name">Jessica White
+                      <div class="badge-name" id="ia2f6t">Ashley Tang
                       </div>
-                      <div class="badge-role">Web Designer
+                      <div class="badge-role">Principal Members
                       </div>
                       <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
                       </div>
@@ -254,7 +209,7 @@
                 </div>
               </div>
             </section>
-            <footer class="footer-under">
+            <footer class="footer-under" id="iwkxe2">
               <div class="container-width">
                 <div class="footer-container">
                   <div class="foot-lists">
@@ -264,8 +219,6 @@
                       <div class="foot-list-item">Contact
                       </div>
                       <div class="foot-list-item">Events
-                      </div>
-                      <div class="foot-list-item">Company
                       </div>
                       <div class="foot-list-item">Jobs
                       </div>
@@ -278,14 +231,6 @@
                       <div class="foot-list-item">Education
                       </div>
                       <div class="foot-list-item">Partner
-                      </div>
-                      <div class="foot-list-item">Community
-                      </div>
-                      <div class="foot-list-item">Forum
-                      </div>
-                      <div class="foot-list-item">Download
-                      </div>
-                      <div class="foot-list-item">Upgrade
                       </div>
                     </div>
                     <div class="clearfix">
@@ -306,9 +251,6 @@
               </div>
               <div class="copyright">
                 <div class="container-width">
-                  <div class="made-with">
-                    made with GrapesJS
-                  </div>
                   <div class="foot-social-btns">facebook twitter linkedin mail
                   </div>
                   <div class="clearfix">
