--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   <div class="badge" id="ipeeff">
                     <div class="badge-header" id="ifsp1k">
                     </div>
-                    <img src="/assets/images/demos/team1.jpg" class="badge-avatar" id="iu3qhc"/>
+                    <img src="" class="badge-avatar" id="iu3qhc"/>
                     <div class="badge-body">
                       <div class="badge-name" id="i1ru01">Wentao Luo
                       </div>
@@ -173,11 +173,11 @@
                   <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="/assets/images/demos/team2.jpg" class="badge-avatar"/>
+                    <img src="../assets/Guo.png" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ip8fly">Yanhao Guo
                       </div>
-                      <div class="badge-role">Princiapl members
+                      <div class="badge-role">Principal members
                       </div>
                       <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
                       </div>
