--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="../assets/Guo.png" class="badge-avatar"/>
+                    <img src="/GordianKnotClub/assets/Guo.png" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ip8fly">Yanhao Guo
                       </div>
@@ -191,7 +191,7 @@
                   <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="/assets/images/demos/team3.jpg" class="badge-avatar"/>
+                    <img src="/GordianKnotClub/assets" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ia2f6t">Ashley Tang
                       </div>
