--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="sub-lead-title" id="ieg23">Embrace time's grace, navigate ambiguity's trace
                 </div>
-                <div class="lead-btn" id="ij832">Join the future
+                <div class="lead-btn" id="ij832">Join us
                 </div>
               </div>
             </header>
@@ -31,36 +31,37 @@
               <div class="container-width" id="iym6y">
                 <div class="flex-title" id="iu88h">What Our Club Does
                 </div>
-                <div class="flex-desc" id="ibvfj">With flexbox system you're able to build complex layouts easily and with free responsivity
+                <div class="flex-desc" id="ibvfj">As a student-run hedge fund, we aim to stimulate real-world asset management experience for UCSD students by employing option integrated investment strategies that balance risk and growth beyond textbook knowledges, empowering members with practical skills in risk assessment and investment.
                 </div>
                 <div class="cards" id="ikkl5">
                   <div class="card" id="ivank">
                     <div class="card-body" id="i2ufz">
-                      <div class="card-title" id="i9e5f">Title 1
+                      <div class="card-title" id="i9e5f">Investment
                       </div>
-                      <div class="card-sub-title" id="ija8z">Subtitle one
+                      <div class="card-sub-title" id="ija8z">Low market correlation, Steady returns, Time investing.
                       </div>
-                      <div class="card-desc" id="i8z1u">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      <div class="card-desc" id="i8z1u"> We diversify across various asset types including equities, bonds, REITs, commodities (oil, gold, natural gas), cryptocurrencies, and country-level macro investments (China, Japan). Each asset is paired with specific options strategies to optimize returns.
                       </div>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-body" id="ifqbo">
-                      <div class="card-title" id="ilkqh">Title 2
+                      <div class="card-title" id="ilkqh">Risk Management
                       </div>
-                      <div class="card-sub-title">Subtitle five
+                      <div class="card-sub-title"> VaR, Sharpe ratio, Volatility
                       </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      <div class="card-desc">We introduce detailed risk profiles, incorporating metrics like the Sharpe ratio, maximum drawdown, and Value at Risk (VaR), to help clients understand the risk associated with their investments. A significant challenge has been to treat assets and their corresponding options positions as a unified entity in these calculations.
                       </div>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-body">
-                      <div class="card-title" id="ieyyr">Title 3
+                      <div class="card-title" id="ieyyr">Professional Knowledges
                       </div>
-                      <div class="card-sub-title">Subtitle six
+                      <div class="card-sub-title">CFA, FRM, DCF, Competitions
                       </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      <div class="card-desc"> 
+                        We provide a structured curriculum covering portfolio theory, risk management, and professional certifications, with experienced members sharing their CFA and FRM insights. Practical lessons include guided asset management and strategic decision-making using models like the Gordon Growth Model and DCF. Additionally, we lead our team in participating in stock pitch, private equity, and quantitative competitions hosted by renowned institutions like UBS.
                       </div>
                     </div>
                   </div>
@@ -185,7 +186,9 @@
                     <div class="badge-foot">
                       <span class="badge-link">f</span>
                       <span class="badge-link">t</span>
-                      <span class="badge-link" id="ip6min">ln</span>
+                      <a href="linkedin.com/in/andrewguoucsd" class="badge-link-wrapper" target="_blank">
+                        <span class="badge-link" id="ip6min">ln</span>
+                      </a>
                     </div>
                   </div>
                   <div class="badge">
