--- a/Team.html
+++ b/Team.html
@@ -10,19 +10,13 @@
                 <div class="logo-container" id="i60l">
                 </div>
                 <nav class="menu" id="icuu">
-                  <a href="Team.html" class="menu-item-link">
-                    <div class="menu-item" id="iraam">Team</div>
-                  </a>
-                  <a href="Performance.html" class="menu-item-link">
-                    <div class="menu-item" id="iraam">Performance</div>
-                  </a>
-                  <a href="strategy.html" class="menu-item-link">
-                    <div class="menu-item" id="iraam">Strategies</div>
-                  </a>
+                    <a href="index.html" class="menu-item-link">
+                        <div class="menu-item" id="il64">Homepage</div>
+                    </a>
                 </nav>
                 <div class="clearfix">
                 </div>
-                <div class="lead-title" id="i3nxp">Gordian Knot Capital Club
+                <div class="lead-title" id="i3nxp">Team members
                 </div>
                 <div class="sub-lead-title" id="ieg23">Embrace time's grace, navigate ambiguity's trace
                 </div>
@@ -30,42 +24,65 @@
                 </div>
               </div>
             </header>
-            <section class="flex-sect" id="iviol">
-              <div class="container-width" id="iym6y">
-                <div class="flex-title" id="iu88h">What Our Club Does
-                </div>
-                <div class="flex-desc" id="ibvfj">As a student-run hedge fund, we aim to stimulate real-world asset management experience for UCSD students by employing option integrated investment strategies that balance risk and growth beyond textbook knowledges, empowering members with practical skills in risk assessment and investment.
-                </div>
-                <div class="cards" id="ikkl5">
-                  <div class="card" id="ivank">
-                    <div class="card-body" id="i2ufz">
-                      <div class="card-title" id="i9e5f">Investment
+            <section class="bdg-sect" id="ihtldu">
+              <div class="container-width">
+                <h1 class="bdg-title" id="i6x5iy">The team
+                </h1>
+                <div class="badges">
+                  <div class="badge" id="ipeeff">
+                    <div class="badge-header" id="ifsp1k">
+                    </div>
+                    <img src="" class="badge-avatar" id="iu3qhc"/>
+                    <div class="badge-body">
+                      <div class="badge-name" id="i1ru01">Wentao Luo
                       </div>
-                      <div class="card-sub-title" id="ija8z">Low market correlation, Steady returns, Time investing.
+                      <div class="badge-role" id="isf3fl">Principal Memembers
                       </div>
-                      <div class="card-desc" id="i8z1u"> We diversify across various asset types including equities, bonds, REITs, commodities (oil, gold, natural gas), cryptocurrencies, and country-level macro investments (China, Japan). Each asset is paired with specific options strategies to optimize returns.
+                      <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
                       </div>
                     </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-body" id="ifqbo">
-                      <div class="card-title" id="ilkqh">Risk Management
-                      </div>
-                      <div class="card-sub-title"> VaR, Sharpe ratio, Volatility
-                      </div>
-                      <div class="card-desc">We introduce detailed risk profiles, incorporating metrics like the Sharpe ratio, maximum drawdown, and Value at Risk (VaR), to help clients understand the risk associated with their investments. A significant challenge has been to treat assets and their corresponding options positions as a unified entity in these calculations.
-                      </div>
+                    <div class="badge-foot">
+                      <span class="badge-link">f</span>
+                      <span class="badge-link">t</span>
+                      <span class="badge-link">ln</span>
                     </div>
                   </div>
-                  <div class="card">
-                    <div class="card-body">
-                      <div class="card-title" id="ieyyr">Professional Knowledges
+                  <div class="badge">
+                    <div class="badge-header">
+                    </div>
+                    <img src="/GordianKnotClub/assets/Guo.png" class="badge-avatar"/>
+                    <div class="badge-body">
+                      <div class="badge-name" id="ip8fly">Yanhao Guo
                       </div>
-                      <div class="card-sub-title">CFA, FRM, DCF, Competitions
+                      <div class="badge-role">Principal members
                       </div>
-                      <div class="card-desc"> 
-                        We provide a structured curriculum covering portfolio theory, risk management, and professional certifications, with experienced members sharing their CFA and FRM insights. Practical lessons include guided asset management and strategic decision-making using models like the Gordon Growth Model and DCF. Additionally, we lead our team in participating in stock pitch, private equity, and quantitative competitions hosted by renowned institutions like UBS.
+                      <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
                       </div>
+                    </div>
+                    <div class="badge-foot">
+                      <span class="badge-link">f</span>
+                      <span class="badge-link">t</span>
+                      <a href="linkedin.com/in/andrewguoucsd" class="badge-link-wrapper" target="_blank">
+                        <span class="badge-link" id="ip6min">ln</span>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="badge">
+                    <div class="badge-header">
+                    </div>
+                    <img src="/GordianKnotClub/assets" class="badge-avatar"/>
+                    <div class="badge-body">
+                      <div class="badge-name" id="ia2f6t">Ashley Tang
+                      </div>
+                      <div class="badge-role">Principal Members
+                      </div>
+                      <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
+                      </div>
+                    </div>
+                    <div class="badge-foot">
+                      <span class="badge-link">f</span>
+                      <span class="badge-link">t</span>
+                      <span class="badge-link">ln</span>
                     </div>
                   </div>
                 </div>
