--- a/Performance.html
+++ b/Performance.html
@@ -5,7 +5,7 @@
             <link rel="stylesheet" href="./css/style.css">
           </head>
           <body>
-            <header class="header-banner2" id="iq5u">
+            <header class="header-banner" id="iq5u">
               <div class="container-width" id="iq7f">
                 <div class="logo-container" id="i60l">
                 </div>
