--- a/Team.html
+++ b/Team.html
@@ -54,16 +54,15 @@
                     <div class="badge-body">
                       <div class="badge-name" id="ip8fly">Yanhao Guo
                       </div>
-                      <div class="badge-role">Principal members
+                      <div class="badge-role"> Principal members, Investment, Risk
                       </div>
-                      <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
+                      <div class="badge-desc"> CFA Level I, investment strategist with expertise in data science and economics, options trading, and fundamental analysis.
                       </div>
                     </div>
                     <div class="badge-foot">
                       <span class="badge-link">f</span>
                       <span class="badge-link">t</span>
-                      <a href="linkedin.com/in/andrewguoucsd" class="badge-link-wrapper" target="_blank">
-                        <span class="badge-link" id="ip6min">ln</span>
+                      <span class="badge-link">ln</span>
                       </a>
                     </div>
                   </div>
