--- a/strategy.html
+++ b/strategy.html
@@ -26,36 +26,30 @@
               <div class="container-width" id="icrx1l">
                 <div class="flex-title" id="iill0k">Our Investment Strategies
                 </div>
-                <div class="flex-desc" id="ikumb3">With flexbox system you're able to build complex layouts easily and with free responsivity
+                <div class="flex-desc" id="ikumb3"> 
+                    Our investment strategies are divided into two distinct branches, each meticulously designed to cater to different investor needs and risk appetites. Both strategy will be complemented with risk management and quantitative analysis.
                 </div>
                 <div class="cards" id="ih4ozp">
-                  <div class="card" id="iwsyhf">
+                  <div class="card2" id="iwsyhf">
                     <div class="card-body" id="i9x48f">
-                      <div class="card-title" id="iq1xeg">Title 1
+                      <div class="card-title" id="iq1xeg">Long-Term Growth
                       </div>
-                      <div class="card-sub-title" id="inr74m">Subtitle one
+                      <div class="card-sub-title" id="inr74m">Stock Pitch, Multistage Gordon Growth Model, Fundamental analysis, Asset Allocation, Risk, Quant Analysis
                       </div>
-                      <div class="card-desc" id="iblbt3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      <div class="card-desc" id="iblbt3">In February 2022, we embarked on an ambitious journey with a modest $6,000, driven by the vision to craft a robust investment strategy tailored to our clients—primarily UCSD students. Over 19 months of diligent experimentation, we developed a dynamic approach that not only met but exceeded our initial expectations.
+                            
+                        This division focuses on achieving steady, long-term returns through a well-constructed portfolio based on asset allocation theory, exploring correlations, options strategies, and quantitative analysis. Our investment strategy aims to maintain a low correlation with the broader market while steadily accruing value through option premiums, dividends, and long-term capital appreciation. Our current portfolio is a combination of diverse asset types, including equities, bonds, REITs, commodities like oil, gold, and natural gas, cryptocurrencies, and country-level macro investments (such as China and Japan). This multifaceted approach is further enhanced by specific options strategies designed for each asset symbol, ensuring a resilient portfolio that delivers consistent returns over time.
                       </div>
                     </div>
                   </div>
-                  <div class="card">
+                  <div class="card2">
                     <div class="card-body" id="iplxb7">
-                      <div class="card-title" id="ipakt8">Title 2
+                      <div class="card-title" id="ipakt8">Alternative Investments
                       </div>
-                      <div class="card-sub-title">Subtitle five
+                      <div class="card-sub-title">Option, Cryptocurrencies, Financial report release, Risk, Qunat Analysis
                       </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-body">
-                      <div class="card-title" id="iifxtb">Title 3
-                      </div>
-                      <div class="card-sub-title">Subtitle six
-                      </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                      <div class="card-desc">This division targets high-risk, high-reward opportunities in alternative investments such as cryptocurrencies and short-term market moves. This branch requires swift decision-making and tactical use of options and leverage to capitalize on promising stocks, especially around key events like financial report releases. By pursuing these aggressive strategies, we aim to hedge the main portfolio and explore diverse possibilities for more significant gains. We open the door to new investments at the start of each month, continually expanding our reach.
+                        As we look to the future, our commitment to learning and refining our strategies remains steadfast. We aim to incorporate more precise tactics and offer additional indicators that our investors value, ensuring that we continue to provide exceptional asset management services.                        
                       </div>
                     </div>
                   </div>
