--- a/Performance.html
+++ b/Performance.html
@@ -3,6 +3,7 @@
           <head>
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
+            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
           </head>
           <body>
             <header class="header-banner" id="iq5u">
@@ -26,39 +27,11 @@
               <div class="container-width" id="icrx1l">
                 <div class="flex-title" id="iill0k">Our Performance
                 </div>
-                <div class="flex-desc" id="ikumb3">With flexbox system you're able to build complex layouts easily and with free responsivity
+                <div class="flex-desc" id="ikumb3">After 17 months of behind-the-scenes work, we launched our strategy publicly nine months ago. Since then, we have grown our investor base from just 2 to 12, achieving consistent monthly profits and distributing dividends exceeding 29%. Our assets under management have surged from $49,470 in October 2023 to $155,061 by June 2024—a remarkable 200%+ increase in just 9 months.
+                    As we look to the future, our commitment to learning and refining our strategies remains steadfast. We aim to incorporate more precise tactics and offer additional indicators that our investors value, ensuring that we continue to provide exceptional asset management services.
                 </div>
-                <div class="cards" id="ih4ozp">
-                  <div class="card" id="iwsyhf">
-                    <div class="card-body" id="i9x48f">
-                      <div class="card-title" id="iq1xeg">Title 1
-                      </div>
-                      <div class="card-sub-title" id="inr74m">Subtitle one
-                      </div>
-                      <div class="card-desc" id="iblbt3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-body" id="iplxb7">
-                      <div class="card-title" id="ipakt8">Title 2
-                      </div>
-                      <div class="card-sub-title">Subtitle five
-                      </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-body">
-                      <div class="card-title" id="iifxtb">Title 3
-                      </div>
-                      <div class="card-sub-title">Subtitle six
-                      </div>
-                      <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                      </div>
-                    </div>
-                  </div>
+                <div class="chart-container" id="chart-container" style="width: 100%; height: 400px;">
+                    <canvas id="performanceChart"></canvas>
                 </div>
               </div>
             </section>
@@ -105,9 +78,6 @@
               </div>
               <div class="copyright">
                 <div class="container-width">
-                  <div class="made-with">
-                    made with GrapesJS
-                  </div>
                   <div class="foot-social-btns">facebook twitter linkedin mail
                   </div>
                   <div class="clearfix">
@@ -115,5 +85,6 @@
                 </div>
               </div>
             </footer>
+            <script src="script.js"></script>
           </body>
         </html>
