--- a/Team.html
+++ b/Team.html
@@ -34,9 +34,9 @@
                     <div class="badge-body">
                       <div class="badge-name" id="i1ru01">Wentao Luo
                       </div>
-                      <div class="badge-role" id="isf3fl">Principal Memembers
+                      <div class="badge-role" id="isf3fl">Co-funder, Alternative investment
                       </div>
-                      <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
+                      <div class="badge-desc">Major in Economics, leading alternative investment decision-making like crypto, and short swing trading.
                       </div>
                     </div>
                     <div class="badge-foot">
@@ -52,9 +52,9 @@
                     <div class="badge-body">
                       <div class="badge-name" id="ip8fly">Yanhao Guo
                       </div>
-                      <div class="badge-role"> Principal members, Investment, Risk
+                      <div class="badge-role"> Co-funder, Investment, Risk
                       </div>
-                      <div class="badge-desc"> CFA Level I, investment strategist with expertise in data science and economics, options trading, and fundamental analysis.
+                      <div class="badge-desc"> CFA Level I Passed; Investment strategist with expertise in data science and economics, options trading, and fundamental analysis.
                       </div>
                     </div>
                     <div class="badge-foot">
@@ -67,13 +67,13 @@
                   <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="/GordianKnotClub/assets" class="badge-avatar"/>
+                    <img src="/GordianKnotClub/assets/tang.png" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ia2f6t">Ashley Tang
                       </div>
-                      <div class="badge-role">Principal Members
+                      <div class="badge-role">Co-funder, Operations
                       </div>
-                      <div class="badge-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore ipsum dolor sit
+                      <div class="badge-desc"> Major in neurobiology & clinical psychology, focusing on member recruitment and advertising strategies, help communicate with outside organization.
                       </div>
                     </div>
                     <div class="badge-foot">
