--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                   <a href="strategy.html" class="menu-item-link">
                     <div class="menu-item" id="iraam">Strategies</div>
                   </a>
+                  <a href="posts.html" class="menu-item-link">
+                    <div class="menu-item" id="iraam">Posts</div>
+                  </a>
                 </nav>
                 <div class="clearfix">
                 </div>
@@ -39,11 +42,22 @@
                 <div class="cards" id="ikkl5">
                   <div class="card" id="ivank">
                     <div class="card-body" id="i2ufz">
-                      <div class="card-title" id="i9e5f">Investment
+                      <div class="card-title" id="i9e5f">Portfolio Investment
                       </div>
-                      <div class="card-sub-title" id="ija8z">Low market correlation, Steady returns, Time investing.
+                      <div class="card-sub-title" id="ija8z"> Asset allocation, Option, Valuation
                       </div>
-                      <div class="card-desc" id="i8z1u"> We diversify across various asset types including equities, bonds, REITs, commodities (oil, gold, natural gas), cryptocurrencies, and country-level macro investments (China, Japan). Each asset is paired with specific options strategies to optimize returns.
+                      <div class="card-desc" id="i8z1u"> The portfolio investment at Gordian Knot Capital is committed to building a portfolio across a wide range of asset types. By leveraging a mix of equities, bonds, REITs, commodities, cryptocurrencies, and country-level macro investments, we aim to optimize returns while managing risk. Each asset class is paired with tailored options strategies to enhance performance under the supervision of risk department to achieve our investment goals.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="card-title" id="ieyyr">Alternative Investment
+                      </div>
+                      <div class="card-sub-title">Cryptocurrency, Short-swing trade
+                      </div>
+                      <div class="card-desc"> 
+                        The Alternative Investments at Gordian Knot Capital is dedicated to exploring high-risk, high-reward opportunities beyond traditional asset classes. This department focuses on dynamic and innovative investment strategies, including cryptocurrency, short swing trades based on short-term signals, and leveraging financial release dates to capitalize on market movements.   
                       </div>
                     </div>
                   </div>
@@ -54,6 +68,18 @@
                       <div class="card-sub-title"> VaR, Sharpe ratio, Volatility
                       </div>
                       <div class="card-desc">We introduce detailed risk profiles, incorporating metrics like the Sharpe ratio, maximum drawdown, and Value at Risk (VaR), to help clients understand the risk associated with their investments. A significant challenge has been to treat assets and their corresponding options positions as a unified entity in these calculations.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="card-title" id="ieyyr">Operations
+                      </div>
+                      <div class="card-sub-title">Advertisement, Website maintaince, data visualizations
+                      </div>
+                      <div class="card-desc"> 
+                      Support the club's strategic objectives through robust operational processes, high-quality data visualization, and dynamic online presence management. This department is responsible for handling various critical functions such as advertisement, hiring, website maintenance, and visualizing asset management performance.
+                        
                       </div>
                     </div>
                   </div>
