--- a/Performance.html
+++ b/Performance.html
@@ -3,7 +3,6 @@
           <head>
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
-            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
           </head>
           <body>
             <header class="header-banner" id="iq5u">
@@ -85,6 +84,7 @@
                 </div>
               </div>
             </footer>
-            <script src="script.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+            <script src="script/script.js"></script>
           </body>
         </html>
