--- a/Team.html
+++ b/Team.html
@@ -3,6 +3,7 @@
           <head>
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
+            <script src="script/joinus.js"></script>
           </head>
           <body>
             <header class="header-banner" id="iq5u">
@@ -18,8 +19,8 @@
                 </div>
                 <div class="lead-title" id="i3nxp">Team members
                 </div>
-                <div class="sub-lead-title" id="ieg23">Embrace time's grace, navigate ambiguity's trace
-                </div>
+                <div class="sub-lead-title" id="ieg23">Please state your intended department, explain why you think you would be a great fit, and kindly attach your resume </div>
+                <button class="lead-btn" id="ij832">Join us</button> <!-- Changed to a button -->
               </div>
             </header>
             <section class="bdg-sect" id="ihtldu">
@@ -110,17 +111,6 @@
                       </div>
                     </div>
                     <div class="clearfix">
-                    </div>
-                  </div>
-                  <div class="form-sub">
-                    <div class="foot-form-cont">
-                      <div class="foot-form-title">Subscribe
-                      </div>
-                      <div class="foot-form-desc">Subscribe to our newsletter to receive exclusive offers and the latest news
-                      </div>
-                      <input type="text" name="name" placeholder="Name" class="sub-input"/>
-                      <input type="text" name="email" placeholder="Email" class="sub-input"/>
-                      <button type="button" class="sub-btn">Submit</button>
                     </div>
                   </div>
                 </div>
