--- a/Team.html
+++ b/Team.html
@@ -37,12 +37,11 @@
                       </div>
                       <div class="badge-role" id="isf3fl">Co-funder, Alternative investment
                       </div>
-                      <div class="badge-desc">Major in Economics, leading alternative investment decision-making like crypto, and short swing trading.
+                      <div class="badge-desc">Major in Economics, leading alternative investment decision-making like crypto, and short swing trading; Financial report analysis, option, risks.
                       </div>
                     </div>
                     <div class="badge-foot">
-                      <span class="badge-link">f</span>
-                      <span class="badge-link">t</span>
+                      <span class="badge-link">ins</span>
                       <span class="badge-link">ln</span>
                     </div>
                   </div>
@@ -59,8 +58,7 @@
                       </div>
                     </div>
                     <div class="badge-foot">
-                      <span class="badge-link">f</span>
-                      <span class="badge-link">t</span>
+                      <span class="badge-link">ins</span>
                       <span class="badge-link">ln</span>
                       </a>
                     </div>
@@ -78,8 +76,7 @@
                       </div>
                     </div>
                     <div class="badge-foot">
-                      <span class="badge-link">f</span>
-                      <span class="badge-link">t</span>
+                      <span class="badge-link">ins</span>
                       <span class="badge-link">ln</span>
                     </div>
                   </div>
@@ -96,10 +93,6 @@
                       <div class="foot-list-item">Contact
                       </div>
                       <div class="foot-list-item">Events
-                      </div>
-                      <div class="foot-list-item">Jobs
-                      </div>
-                      <div class="foot-list-item">Blog
                       </div>
                     </div>
                     <div class="foot-list">
