--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="form-sub">
           <div class="foot-form-cont">
             <div class="foot-form-title">Subscribe</div>
-            <div class="foot-form-desc">Subscribe to our newsletter to receive exclusive offers and the latest news</div>
+            <div class="foot-form-desc">Subscribe to our newsletter to receive our activity updates and performance reports</div>
             <input type="text" name="name" placeholder="Name" class="sub-input"/>
             <input type="text" name="email" placeholder="Email" class="sub-input"/>
             <button type="button" class="sub-btn">Submit</button>
