--- a/Performance.html
+++ b/Performance.html
@@ -18,7 +18,8 @@
                 </div>
                 <div class="lead-title" id="i3nxp">Our Historical Performance
                 </div>
-                <div class="sub-lead-title" id="ieg23">Embrace time's grace, navigate ambiguity's trace
+                <div class="sub-lead-title" id="ieg23">
+                  We have achieved an impressive 29% after-tax cumulative profit for our clients over the past 9 months. We warmly invite passionate individuals with a keen interest in the stock market to connect with us.
                 </div>
               </div>
             </header>
