--- a/Team.html
+++ b/Team.html
@@ -58,8 +58,8 @@
                       </div>
                     </div>
                     <div class="badge-foot">
-                      <span class="badge-link">ins</span>
-                      <span class="badge-link">ln</span>
+                        <a href="assets/YanhaoGuo Resume.pdf" class="badge-link" target="_blank">res</a>
+                        <a href="https://www.linkedin.com/in/andrewguoucsd/" target="_blank" class="badge-link">ln</a >
                       </a>
                     </div>
                   </div>
@@ -76,11 +76,33 @@
                       </div>
                     </div>
                     <div class="badge-foot">
-                      <span class="badge-link">ins</span>
+                      <span class="badge-link">resume</span>
                       <span class="badge-link">ln</span>
                     </div>
                   </div>
                 </div>
+                <h1 class="bdg-title" id="i6x5iy">Consultants
+                </h1>
+                <div class="flex-desc" id="i2">
+                Individuals who kindly share their valuable expertise with our club.
+                </div>
+                <div class="badge">
+                    <div class="badge-header">
+                    </div>
+                    <img src="/GordianKnotClub/assets/Guo.png" class="badge-avatar"/>
+                    <div class="badge-body">
+                      <div class="badge-name" id="ip8fly">Yanhao Guo
+                      </div>
+                      <div class="badge-role"> Co-funder, Investment, Risk
+                      </div>
+                      <div class="badge-desc"> CFA Level I Passed; Investment strategist with expertise in data science and economics, options trading, and fundamental analysis.
+                      </div>
+                    </div>
+                    <div class="badge-foot">
+                        <a href="https://www.linkedin.com/in/andrewguoucsd/" target="_blank" class="badge-link">ln</a >
+                      </a>
+                    </div>
+                  </div>
               </div>
             </section>
             <footer class="footer-under" id="iwkxe2">
