--- a/posts.html
+++ b/posts.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="lead-title" id="i3nxp">Our Activities Posts
                 </div>
-                <div class="sub-lead-title" id="ieg23">Embrace time's grace, navigate ambiguity's trace
+                <div class="sub-lead-title" id="ieg23"> We will share our asset management program's monthly updates, company's fundamental analysis reports and other club activities here. 
                 </div>
               </div>
             </header>
