--- a/strategy.html
+++ b/strategy.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="lead-title" id="i3nxp">Our investment strategies/logistics
                 </div>
-                <div class="sub-lead-title" id="ieg23">Embrace time's grace, navigate ambiguity's trace
+                <div class="sub-lead-title" id="ieg23">Be friends with time, Embrace the ambugious right.
                 </div>
               </div>
             </header>
