--- a/Team.html
+++ b/Team.html
@@ -91,11 +91,11 @@
                     </div>
                     <img src="/GordianKnotClub/assets/Guo.png" class="badge-avatar"/>
                     <div class="badge-body">
-                      <div class="badge-name" id="ip8fly">Yanhao Guo
+                      <div class="badge-name" id="ip8fly">Eric Gu
                       </div>
-                      <div class="badge-role"> Co-funder, Investment, Risk
+                      <div class="badge-role"> Kindly assist with club website building
                       </div>
-                      <div class="badge-desc"> CFA Level I Passed; Investment strategist with expertise in data science and economics, options trading, and fundamental analysis.
+                      <div class="badge-desc"> 
                       </div>
                     </div>
                     <div class="badge-foot">
