updating Eric info

--- a/Team.html
+++ b/Team.html
@@ -89,17 +89,17 @@
                 <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="/GordianKnotClub/assets/Guo.png" class="badge-avatar"/>
+                    <img src="/GordianKnotClub/assets/Eric.png" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ip8fly">Eric Gu
                       </div>
-                      <div class="badge-role"> Kindly assist with club website building
+                      <div class="badge-role"> Major in Data Science and Probability & Statistics, focusing on web development and data analysis.
                       </div>
                       <div class="badge-desc"> 
                       </div>
                     </div>
                     <div class="badge-foot">
-                        <a href="https://www.linkedin.com/in/andrewguoucsd/" target="_blank" class="badge-link">ln</a >
+                        <a href="https://www.linkedin.com/in/eric-gu433/" target="_blank" class="badge-link">ln</a >
                       </a>
                     </div>
                   </div>
